--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,6 +13,8 @@ on:
 
 jobs:
   build:
+    env:
+      backend-directory: ./backend
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -31,7 +33,8 @@ jobs:
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
     - name: Build with Gradle Wrapper
-      run: ./backend/gradlew build
+      run: ./gradlew build
+      working-directory: ${{ env.backend-directory }}
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
@@ -43,6 +46,7 @@ jobs:
         
     - name: Build with Gradle 8.7 (yubin)
       run: gradle build
+      working-directory: ${{ env.backend-directory }}
 
   dependency-submission:
     runs-on: ubuntu-latest
@@ -61,3 +65,4 @@ jobs:
     # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
     - name: Generate and submit dependency graph
       uses: gradle/actions/dependency-submission@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+      
