--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -65,6 +65,11 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+        
+    - name: Build with Gradle (yubin)
+      uses: gradle/gradle-build-action@v2
+      with:
+        gradle-version: 8.7
 
     # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
     # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
