--- a/api_server/src/main/resources/application.yml
+++ b/api_server/src/main/resources/application.yml
@@ -1,7 +1,14 @@
 spring:
   application:
     name: double-bean-api-server
-    
+
+  devtools:
+    restart:
+      enabled: true
+      additional-exclude: static/**, public/**
+    livereload:
+      enabled: true
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/double_bean?allowMultiQueries=true
