--- a/api_server/pom.xml
+++ b/api_server/pom.xml
@@ -97,6 +97,38 @@
                 <configuration>
                 </configuration>
             </plugin>
+            <plugin>
+		      <groupId>io.sentry</groupId>
+		      <artifactId>sentry-maven-plugin</artifactId>
+		      <version>0.0.8</version>
+		      <extensions>true</extensions>
+		      <configuration>
+		        <!-- for showing output of sentry-cli -->
+		        <debugSentryCli>true</debugSentryCli>
+		
+		        <org>ssafy-yubin</org>
+		
+		        <project>ketchup-now</project>
+		
+		        <!-- in case you're self hosting, provide the URL here -->
+		        <!--<url>http://localhost:8000/</url>-->
+		
+		        <!-- provide your auth token via SENTRY_AUTH_TOKEN environment variable -->
+		        <authToken>${env.SENTRY_AUTH_TOKEN}</authToken>
+		      </configuration>
+		      <executions>
+		        <execution>
+		          <goals>
+		            <!--
+		            Generates a JVM (Java, Kotlin, etc.) source bundle and uploads your source code to Sentry.
+		            This enables source context, allowing you to see your source
+		            code as part of your stack traces in Sentry.
+		            -->
+		            <goal>uploadSourceBundle</goal>
+		          </goals>
+		        </execution>
+		      </executions>
+		    </plugin>
         </plugins>
     </build>
 
