--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
+    "sass": "^1.77.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
