--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.1",
+    "async-mutex": "^0.5.0",
     "axios": "^1.6.8",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
